--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -6,7 +6,8 @@
 
     <TextView
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
+        android:layout_weight="0.45"
         android:text="@string/hello" />
 
 </LinearLayout>
