--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -17,15 +17,16 @@
 
             <TextView
                 android:id="@+id/textView1"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight=".90"
                 android:text="TextView" />
 
             <ScrollView
                 android:id="@+id/scrollView1"
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent" >
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_weight=".20" >
 
                 <LinearLayout
                     android:layout_width="fill_parent"
@@ -35,11 +36,11 @@
                         android:id="@+id/debugMsg"
                         android:layout_width="fill_parent"
                         android:layout_height="fill_parent"
+                        android:layout_weight="0.10"
                         android:text="TextView" />
 
                 </LinearLayout>
             </ScrollView>
-
         </TableRow>
 
         <TableRow
