--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -26,20 +26,16 @@
                 android:id="@+id/scrollView1"
                 android:layout_width="0dp"
                 android:layout_height="fill_parent"
-                android:layout_weight=".20" >
+                android:layout_weight=".30" >
 
-                <LinearLayout
+                <TextView
+                    android:id="@+id/debugMsg"
                     android:layout_width="fill_parent"
-                    android:layout_height="fill_parent" >
+                    android:layout_height="fill_parent"
+                    android:layout_gravity="bottom"
+                    android:layout_weight="0.10"
+                    android:text="TextView" />
 
-                    <TextView
-                        android:id="@+id/debugMsg"
-                        android:layout_width="fill_parent"
-                        android:layout_height="fill_parent"
-                        android:layout_weight="0.10"
-                        android:text="TextView" />
-
-                </LinearLayout>
             </ScrollView>
         </TableRow>
 
@@ -47,7 +43,7 @@
             android:id="@+id/tableRow2"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_weight=".10"
             android:gravity="center" >
 
             <LinearLayout
@@ -77,6 +73,7 @@
                     android:gravity="center_horizontal" >
 
                     <Button
+                        style="?android:attr/buttonStyleSmall"
                         android:id="@+id/btnup"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -92,6 +89,7 @@
                     android:gravity="center_horizontal" >
 
                     <Button
+                        style="?android:attr/buttonStyleSmall"
                         android:id="@+id/btnleft"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -99,6 +97,7 @@
                         android:text="@string/left" />
 
                     <Button
+                        style="?android:attr/buttonStyleSmall"
                         android:id="@+id/btnright"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -114,6 +113,7 @@
                     android:gravity="center_horizontal" >
 
                     <Button
+                        style="?android:attr/buttonStyleSmall"
                         android:id="@+id/btndown"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
